--- a/src/app/programacion-semanal/programacion-semanal.component.html
+++ b/src/app/programacion-semanal/programacion-semanal.component.html
@@ -1,4 +1,4 @@
-<button mat-icon-button >    
+<!-- <button mat-icon-button >    
   <mat-icon>add</mat-icon>
   <mat-icon>check</mat-icon>
   <mat-icon>edit</mat-icon>
@@ -17,7 +17,7 @@
   <mat-icon>star</mat-icon>
   <mat-icon>warning</mat-icon>
   <mat-icon>error</mat-icon>
-</button> 
+</button>  -->
 
  <mat-card class="item-lista-externo">
   <div class="item-lista">
