--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -13,3 +13,29 @@ body {
     color: #2d564e;
     background-color: #54b57b;
   }
+
+/* Agrega estilos para que los li se vean como botones */
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+li {
+  margin-bottom: 10px;
+}
+
+li a {
+  display: block;
+  padding: 10px;
+  background-color: #f0f0f0;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  text-decoration: none;
+  color: #333;
+  transition: background-color 0.3s ease;
+}
+
+li a:hover {
+  background-color: #ddd;
+}
