--- a/src/app/creacion-menu/creacion-menu.component.html
+++ b/src/app/creacion-menu/creacion-menu.component.html
@@ -2,11 +2,11 @@
   
   <div class="container">
     <div class="left">
-      <h1>Menús completos diarios  
+      <h1>Creación de Menus
         <button mat-icon-button (click)="seleccionarDia()">
           <mat-icon>add</mat-icon>
         </button>
-        <input type="text" [(ngModel)]="buscarTexto" placeholder="Buscar" (input)="filtrarMenus($event)">
+        <input type="text" [(ngModel)]="buscarTexto" placeholder="Buscar menus" (input)="filtrarMenus($event)">
       </h1>
 
       <mat-accordion>
