--- a/src/app/creacion-menu/creacion-menu.component.html
+++ b/src/app/creacion-menu/creacion-menu.component.html
@@ -2,7 +2,7 @@
   
   <div class="container">
     <div class="left">
-      <h1>Creación de Menus
+      <h1>Creación de Menu
         <button mat-icon-button (click)="seleccionarDia()">
           <mat-icon>add</mat-icon>
         </button>
